--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,18 @@ beautifulsoup4==4.11.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.3
+dnspython==2.2.1
 Flask==2.1.2
+Flask-Cors==3.0.10
 google==3.0.0
 idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 pymongo==4.1.1
+python-dotenv==0.20.0
 requests==2.27.1
+six==1.16.0
 soupsieve==2.3.2.post1
 urllib3==1.26.9
 Werkzeug==2.1.2
